# kyouth-data-ai

./: .gitignore  kyouth-data-ai.code-workspace  main.py  pyproject.toml
week_1/: .gitignore  README.md  main.py  pyproject.toml
week_1/data/3_gold/: jobs.db
week_1/database/: config.py
week_1/schema/: jobs.sql
week_1/src/: ingestor.py  loader.py  processor.py  profiler.py
week_1/src/dao/: JobListing.py
week_2/: .gitignore  README.md  find_skill_gaps.py  main.py  mcp_server.py  prompt_model.py  pyproject.toml  rate_limits.text  tag_data.py
week_2/dao/: skill_gap_result.py
week_2/data/: jobs.db  resume_cpp.txt  resume_fullstack.txt  resume_jailbreak.txt  resume_softskills.txt  resume_web_dev.txt
week_2/database/: config.py
week_2/enums/: models.py
week_2/settings/: config.py
week_3/: .gitignore  README.md  docker-compose.yml  docker.example.env  pyproject.toml
week_3/backend/: .env.example  Dockerfile  main.py  prompt_model.py  pyproject.toml
week_3/backend/settings/: config.py
week_3/frontend/: .dockerignore  Dockerfile  pyproject.toml  railway.json
week_3/frontend/src/: main.py
week_3/frontend/src/static/css/: app.css  index.css
week_3/frontend/src/templates/: app.html  index.html
