[project]
name = "week-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.0.0",
    "google-genai>=1.0.0",
    "ollama>=0.6.2",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
