[project]
name = "week-3-backend"
version = "0.1.0"
description = "Resume helper chat backend"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "ollama>=0.6.2",
    "google-genai>=1.0.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
]
